--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
-    "name": "My App",
-    "short_name": "short name",
-    "theme_color": "#2196f3",
-    "background_color": "#2196f3",
-    "display": "browser",
-    "Scope": "/",
-    "start_url": "/",
+    "name": "Only Manifest",
+    "short_name": "only_manifest",
+    "description": "dummy application to demo manifest without SW",
+    "start_url": "/index.html",
+    "scope": ".",
+    "background_color": "#EEE",
+    "theme_color": "#4A148C",
+    "display": "standalone",
+    "orientation": "portrait-primary",
+    "dir": "ltr",
+    "lang": "en-US",
     "icons": [
       {
         "src": "images/icons/icon-72x72.png",
